20231024 ./watchlist/clean.sh added.
20231024 ./watchlist/hia-parse-http-git.sh added.
20231024 ./watchlist/pubk.sh added.
20231024 ./watchlist/c/l.sh added.
20231024 ./watchlist/c/top.sh added.
20231024 ./watchlist/c/walk.sh added.
20231024 ./watchlist/c/ver-d.sh added.
20231024 ./watchlist/c/walk2b.sh added.
20231024 ./watchlist/c/ver-m.sh added.
20231024 ./watchlist/c/counts.sh added.
20231024 ./watchlist/c/walk2c.sh added.
20231024 ./watchlist/c/v.sh added.
20231024 ./watchlist/c/walk2.sh added.
20231024 ./watchlist/c/shame.sh added.
20231024 ./test/d3map/d3map.sh added.
20231024 ./test/d3map/d3.v3.min.js added.
20231024 ./README.txt updated.
20231024 ./watchlist/hia-parse-cifs.sh updated.
20231024 ./watchlist/hia-parse-dns.sh updated.
20231024 ./watchlist/hia-parse-ftp.sh updated.
20231024 ./watchlist/hia-parse-http.sh updated.
20231024 ./watchlist/hia-parse-http-ipfs.sh updated.
20231024 ./watchlist/hia-parse-http-titles.sh updated.
20231024 ./watchlist/hia-parse-nfs.sh updated.
20231024 ./watchlist/hia-parse-nodeinfo.sh updated.
20231024 ./watchlist/hia-parse-proxy.sh updated.
20231024 ./watchlist/hia-parse-ssh.sh updated.
20231024 ./watchlist/hia-parse-ssl.sh updated.
20231024 ./watchlist/hia-parse-ver.sh updated.
20231024 ./watchlist/hia-parse-http-git.sh updated.
20231025 ./watchlist/hia-parse-http-titles.sh updated.
20231025 ./watchlist/hia-parse-http-git.sh updated.
20231106 ./watchlist/c/shame.sh updated.
20231203 ./watchlist/pubk.sh updated.
20240203 ./watchlist/hia-scan-udp.sh updated.
20240203 ./watchlist/hia-scan-tcp.sh updated.
20240203 ./watchlist/hia-scan-udp.sh updated.
20240210 ./watchlist/hia-parse-http-cjdradio.sh added.
20240210 ./watchlist/hia-parse-http-cjdradio.sh updated.
20240229 ./watchlist/hia-parse-http-cjdradio.sh updated.
20240229 ./watchlist/hia-parse-nntp.sh added.
20240229 ./watchlist/hia-parse-nntp.sh updated.
20240305 ./watchlist/hia-scan-tcp.sh updated.
20240305 ./watchlist/hia-scan-udp.sh updated.