@@ -126,3 +126,4 @@
 20240229 ./watchlist/hia-parse-nntp.sh updated.
 20240305 ./watchlist/hia-scan-tcp.sh updated.
 20240305 ./watchlist/hia-scan-udp.sh updated.
+20240702 ./watchlist/bithunt-submit.sh updated.
